<resources>
    <string name="app_name">Tamagotchi</string>
    <string name="se_connecter">Se connecter</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="pr_t_adopter_ton_nouveau_compagnon_inscris_toi_ici">Prêt à adopter ton nouveau compagnon? &#10; inscris-toi ici </string>
    <string name="r_cup_ration_mdp">Récupération mdp</string>
    <string name="tu_as_oubli_ton_mot_de_passe_pas_de_panique_ton_mimichi_t_attend">Tu as oublié ton mot de passe ? &#10;Pas de panique, ton Mimichi t’attend !</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="main_activity_2">Main activity 2</string>
    <string name="description_de_l_image" />
    <string name="inscription">Inscription</string>
    <string name="passons_votre_mimichi">Passons à votre Mimichi !</string>
    <string name="nom_du_proprietaire">Nom du proprietaire</string>
    <string name="non_du_mimichi">Non du Mimichi</string>
    <string name="entrez_votre_nom">Entrez votre nom</string>
    <string name="entrez_le_nom_du_mimichi">Entrez le nom du Mimichi</string>
    <string name="adresse_e_mail">Adresse e-mail</string>
    <string name="entrez_votre_adresse_e_mail">Entrez votre adresse e-mail</string>
    <string name="entrez_votre_mot_de_passe">Entrez votre mot de passe</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="genre">Genre</string>
    <string name="male">Male</string>
    <string name="femelle">Femelle</string>
    <string name="entre_ton_email_pour_recevoir_un_lien_de_r_initialisation_et_r_cup_rer_ton_compte_en_un_clin_d_il">Entre ton email pour recevoir un lien de réinitialisation et récupérer ton compte en un clin d\'œil !</string>
    <string name="envoyer_le_lien_de_r_initialisation">Envoyer le lien de réinitialisation</string>
    <string name="retour_la_connexion">Retour à la connexion</string>
    <string name="liste_des_mimichis">Liste des Mimichis</string>
    <string name="importer_un_mimichi">Importer un Mimichi</string>
    <string name="exporter_un_mimichi">Exporter un Mimichi</string>
    <string name="cr_er_un_nouveau_mimichi">Créer un nouveau Mimichi</string>
    <string name="retour_l_accueil">Retour à l\'accueil</string>
    <string name="entrez_votre_adresse_e_mail_pour_recevoir_un_lien_de_r_initialisation">Entrez votre adresse e-mail pour recevoir un lien de réinitialisation</string>
    <string name="voici_la_liste_de_tous_vos_mimichis">Voici la liste de tous vos Mimichis</string>
    <string name="nouveau_ou_ancien_ton_mimichi_est_toujours_l_pour_toi">Nouveau ou ancien, ton Mimichi est toujours là pour toi !</string>
    <string name="connexion">Connexion</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié</string>
    <string name="image_de_bienvenue">image de bienvenue</string>
    <string name="commen_ons_par_vous">Commençons par vous !</string>
    <string name="image_d_inscription2">image d\'inscription2</string>
    <string name="image_d_inscription1">image d\'inscription1</string>
    <string name="pas_de_panique">Pas de panique !</string>
    <string name="modifier_un_mimichi">Modifier un Mimichi</string>
    <string name="supprimer_un_mimichi">Supprimer un Mimichi</string>
    <string name="r_initialiser_le_mot_de_passe">Réinitialiser le mot de passe</string>
    <string name="param_tres_du_compte">Paramètres du compte</string>
    <string name="param_tres_des_mimichis">Paramètres des Mimichis</string>
    <string name="s_lectionner">Sélectionner</string>
    <string name="nourriture">Nourriture</string>
    <string name="douche">Douche</string>
    <string name="jouet">Jouet</string>
    <string name="m_dicament">Médicament</string>
    <string name="boisson">Boisson</string>
    <string name="sommeil">Sommeil</string>
    <string name="parametres">Parametres</string>
    <string name="un_petit_tre_attend_que_tu_lui_donnes_vie_pr_t_accueillir_un_nouveau_mimichi">Un petit être attend que tu lui donnes vie… Prêt à accueillir un nouveau Mimichi ?</string>
    <string name="ajouter">Ajouter</string>
    <string name="il_t_a_accompagn_il_a_grandi_avec_toi_es_tu_pr_t_laisser_partir_ton_mimichi">Il t’a accompagné, il a grandi avec toi… Es-tu prêt à laisser partir ton Mimichi ?</string>
    <string name="supprimer">Supprimer</string>
    <string name="nom_du_mimichi">Nom du Mimichi</string>
    <string name="cette_action_est_irr_versible_ton_mimichi_ne_pourra_pas_tre_r_cup_r">Cette action est irréversible. Ton Mimichi ne pourra pas être récupéré.</string>
</resources>