<?xml version="1.0" encoding="utf-8"?>

<!--
     Date : 18 avril 2025
     Membre qui travaille dessus : Yasmine DEHOUCHE.
     Que fait le code XML? Ce layout XML représente la page d'accueil après inscription ou connexion, elle inclue tous les boutons pour intéragir avec le Mimichi ainsi qu'un bouton de paramètres
-->


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/accueil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/tama1"
        tools:ignore="MissingConstraints" />

    <FrameLayout
        android:layout_width="180dp"
        android:layout_height="180dp"
        tools:layout_editor_absoluteX="269dp"
        tools:layout_editor_absoluteY="231dp"
        android:layout_margin="8dp">

        <!-- ProgressBar circulaire personnalisée -->

        <!-- Image au centre -->
        <ImageView
            android:id="@+id/imageViewBoisson"
            android:layout_width="169dp"
            android:layout_height="171dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/boisson"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/boisson" />

        <ProgressBar
            android:id="@+id/progressBarBoisson"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:indeterminate="false"
            android:max="100"
            android:progress="50"
            android:progressDrawable="@drawable/circular_progress" />
    </FrameLayout>

    <!--<ImageView
        android:id="@+id/imageViewBoisson"
        android:layout_width="169dp"
        android:layout_height="171dp"
        app:srcCompat="@drawable/boisson"
        tools:layout_editor_absoluteX="269dp"
        tools:layout_editor_absoluteY="231dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/boisson"
        tools:ignore="MissingConstraints,VisualLintBounds" />-->

    <ImageView
        android:id="@+id/imageViewDouche"
        android:layout_width="178dp"
        android:layout_height="168dp"
        app:srcCompat="@drawable/douche"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/douche"
        tools:ignore="MissingConstraints,ImageContrastCheck,VisualLintBounds"
        tools:layout_editor_absoluteX="260dp"
        tools:layout_editor_absoluteY="422dp" />

    <ImageView
        android:id="@+id/imageViewJouet"
        android:layout_width="235dp"
        android:layout_height="192dp"
        app:srcCompat="@drawable/jouet"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/jouet"
        tools:ignore="MissingConstraints,ImageContrastCheck,VisualLintBounds"
        tools:layout_editor_absoluteX="-29dp"
        tools:layout_editor_absoluteY="564dp" />

    <ImageView
        android:id="@+id/imageViewMedicament"
        android:layout_width="218dp"
        android:layout_height="152dp"
        app:srcCompat="@drawable/medicament"
        tools:layout_editor_absoluteX="248dp"
        tools:layout_editor_absoluteY="331dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/m_dicament"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <ImageView
        android:id="@+id/imageViewNourriture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/nourriture"
        tools:layout_editor_absoluteX="306dp"
        tools:layout_editor_absoluteY="164dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/nourriture"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageViewSommeil"
        android:layout_width="252dp"
        android:layout_height="188dp"
        app:srcCompat="@drawable/sommeil"
        tools:layout_editor_absoluteX="236dp"
        tools:layout_editor_absoluteY="16dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/sommeil"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <ImageView
        android:id="@+id/imageViewIconeParametres"
        android:layout_width="148dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/iconeparametres"
        tools:layout_editor_absoluteX="-29dp"
        tools:layout_editor_absoluteY="-2dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/parametres"
        tools:ignore="MissingConstraints,VisualLintBounds" />


</androidx.constraintlayout.widget.ConstraintLayout>