<?xml version="1.0" encoding="utf-8"?>

<!--
     Date : 20 avril 2025
     Membre qui travaille dessus : Yasmine DEHOUCHE
     Que fait le code XML? Ce layout XML représente la page d'ajout d'un nouveau Mimichi pour un utilisateur ayant déja un compte
-->


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nouveau_mimichi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#debdf0"
    tools:context=".view.ModifierMimichiActivity">

    <TextView
        android:layout_width="404dp"
        android:layout_height="187dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="Modifie ton Mimichi"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <ImageView
        android:id="@+id/imageViewNouveauMimichi"
        android:layout_width="243dp"
        android:layout_height="162dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388"
        app:srcCompat="@drawable/nouveaumimichi"
        tools:ignore="ContentDescription" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom_du_mimichi"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.332"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603" />

    <EditText
        android:id="@+id/nomTamagotchiInput"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:background="@drawable/textviewbg"
        android:ems="10"
        android:hint="@string/entrez_le_nom_du_mimichi"
        android:paddingStart="10dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663"
        tools:ignore="Autofill,TextFields" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751" />

    <RadioGroup
        android:id="@+id/radio_group_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.76"
        app:layout_constraintHorizontal_bias="0.5">

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="#343fe9"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="522dp"
            tools:ignore="MissingConstraints" />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femelle"
            android:textColor="#AA00FF"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="204dp"
            tools:layout_editor_absoluteY="522dp"
            tools:ignore="MissingConstraints" />

    </RadioGroup>


    <Button
        android:id="@+id/modifierButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="Modifier"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/retourButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:onClick="retour"
        android:padding="8dp"
        android:text="@string/retour_l_accueil"
        android:textColor="#3F51B5"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />


</androidx.constraintlayout.widget.ConstraintLayout>